[gd_scene load_steps=8 format=3 uid="uid://crrowifv4l4jk"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_b8f8x"]
[ext_resource type="Texture2D" uid="uid://bn8bc0o1mr5xg" path="res://sprites/8-bit-graphics-pixels-scene-with-castle_23-2151121019.jpg" id="2_l26nr"]
[ext_resource type="Texture2D" uid="uid://ct5fxvpar1w2m" path="res://sprites/Play.png" id="2_mwjg5"]
[ext_resource type="FontFile" uid="uid://bqo71dyw8jr8r" path="res://shaders/arcadeclassic.regular.ttf" id="3_p7r6k"]
[ext_resource type="Texture2D" uid="uid://brvipsepmu3o7" path="res://sprites/Settings.png" id="3_wcnoe"]
[ext_resource type="Theme" uid="uid://i3nqvaxmoqd0" path="res://shaders/button.tres" id="3_xaban"]
[ext_resource type="Texture2D" uid="uid://bvs47cishjfec" path="res://sprites/Close.png" id="4_8migk"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b8f8x")

[node name="8-bit-graphics-pixels-scene-with-castle23-2151121019" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.15663, 1.06931)
texture = ExtResource("2_l26nr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = -126.0
offset_right = 113.0
offset_bottom = -25.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
theme = ExtResource("3_xaban")
theme_override_fonts/font = ExtResource("3_p7r6k")
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xaban")
theme_override_fonts/font = ExtResource("3_p7r6k")
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("3_xaban")
theme_override_fonts/font = ExtResource("3_p7r6k")
text = "Exit"

[node name="Play" type="Sprite2D" parent="."]
position = Vector2(128.375, 532.125)
scale = Vector2(1.10714, 0.988633)
texture = ExtResource("2_mwjg5")

[node name="Settings" type="Sprite2D" parent="."]
position = Vector2(128, 557)
scale = Vector2(1.09821, 1.05113)
texture = ExtResource("3_wcnoe")

[node name="Close" type="Sprite2D" parent="."]
position = Vector2(128.75, 582.5)
scale = Vector2(1.63333, 1.56249)
texture = ExtResource("4_8migk")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
